Added cool new features to my portfolio

--- a/index.html
+++ b/index.html
@@ -2593,7 +2593,7 @@
             <div class="floating-element"></div>
         </div>
         <div class="hero-content">
-            <h1 class="hero-title">Welcome to My World</h1>
+            <h1 class="hero-title">Welcome to My Portfolio</h1>
             <h2 class="hero-subtitle typing-text">Full-Stack Developer & Creative Coder</h2>
             <p class="hero-text">I'm Abdibasid, a full-stack developer who loves building interactive, visually rich
                 experiences. I mix creativity with code to craft portfolios, apps, and digital art that stand out.</p>
